--- a/Clowns' F8/Clowns' F8.vcxproj.filters
+++ b/Clowns' F8/Clowns' F8.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="..\Clowns%27 F8\MapLevel1.h">
       <Filter>Entities\Objects</Filter>
     </ClInclude>
+    <ClInclude Include="..\Clowns%27 F8\BearTrap.h">
+      <Filter>Entities\Objects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp">
@@ -246,6 +249,9 @@
       <Filter>Entities\EntitiesCharacters</Filter>
     </ClCompile>
     <ClCompile Include="..\Clowns%27 F8\MapLevel1.cpp">
+      <Filter>Entities\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Clowns%27 F8\BearTrap.cpp">
       <Filter>Entities\Objects</Filter>
     </ClCompile>
   </ItemGroup>
