--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -137,7 +137,7 @@
     <ClInclude Include="..\Clowns%27 F8\CharacterGeorgeB.h" />
     <ClInclude Include="..\Clowns%27 F8\CharacterSapphire.h" />
     <ClInclude Include="..\Clowns%27 F8\CharacterStorm.h" />
-    <ClInclude Include="..\Clowns%27 F8\MapLevel1.h" />
+    <ClInclude Include="Tree.h" />
     <ClInclude Include="..\Clowns%27 F8\BearTrap.h" />
     <ClInclude Include="..\Clowns%27 F8\Object.h" />
     <ClInclude Include="..\Clowns%27 F8\Pinkking.h" />
@@ -178,7 +178,7 @@
     <ClCompile Include="..\Clowns%27 F8\CharacterGeorgeB.cpp" />
     <ClCompile Include="..\Clowns%27 F8\CharacterSapphire.cpp" />
     <ClCompile Include="..\Clowns%27 F8\CharacterStorm.cpp" />
-    <ClCompile Include="..\Clowns%27 F8\MapLevel1.cpp" />
+    <ClCompile Include="Tree.cpp" />
     <ClCompile Include="..\Clowns%27 F8\BearTrap.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Object.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Pinkking.cpp" />
