--- a/Clowns' F8/Clowns' F8.vcxproj.filters
+++ b/Clowns' F8/Clowns' F8.vcxproj.filters
@@ -147,10 +147,10 @@
     <ClInclude Include="..\Clowns%27 F8\Object.h">
       <Filter>Entities\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="..\Clowns%27 F8\MapLevel1.h">
+    <ClInclude Include="..\Clowns%27 F8\BearTrap.h">
       <Filter>Entities\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="..\Clowns%27 F8\BearTrap.h">
+    <ClInclude Include="Tree.h">
       <Filter>Entities\Objects</Filter>
     </ClInclude>
   </ItemGroup>
@@ -248,13 +248,13 @@
     <ClCompile Include="..\Clowns%27 F8\CharacterGeorgeB.cpp">
       <Filter>Entities\EntitiesCharacters</Filter>
     </ClCompile>
-    <ClCompile Include="..\Clowns%27 F8\MapLevel1.cpp">
-      <Filter>Entities\Objects</Filter>
-    </ClCompile>
     <ClCompile Include="..\Clowns%27 F8\BearTrap.cpp">
       <Filter>Entities\Objects</Filter>
     </ClCompile>
     <ClCompile Include="..\Clowns%27 F8\Object.cpp">
+      <Filter>Entities\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="Tree.cpp">
       <Filter>Entities\Objects</Filter>
     </ClCompile>
   </ItemGroup>
