--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="..\Clowns%27 F8\CharacterStorm.h" />
     <ClInclude Include="..\Clowns%27 F8\Color.h" />
     <ClInclude Include="..\Clowns%27 F8\Fade.h" />
+    <ClInclude Include="..\Clowns%27 F8\Language.h" />
     <ClInclude Include="..\Clowns%27 F8\MainMenu.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleSceneManager.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleTransitionManager.h" />
@@ -194,6 +195,7 @@
     <ClCompile Include="..\Clowns%27 F8\Color.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Enemy.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Fade.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Language.cpp" />
     <ClCompile Include="..\Clowns%27 F8\MainMenu.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleSceneManager.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleTransitionManager.cpp" />
