bugfix enemy lifebar ghost

--- a/Clowns' F8/Clowns' F8.vcxproj.filters
+++ b/Clowns' F8/Clowns' F8.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClInclude Include="..\Clowns%27 F8\Language.h">
       <Filter>Containers</Filter>
     </ClInclude>
+    <ClInclude Include="..\Clowns%27 F8\CharacterHektor.h">
+      <Filter>Entities\EntitiesCharacters</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp">
@@ -322,6 +325,9 @@
     </ClCompile>
     <ClCompile Include="..\Clowns%27 F8\Language.cpp">
       <Filter>Containers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Clowns%27 F8\CharacterHektor.cpp">
+      <Filter>Entities\EntitiesCharacters</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
