--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{22D3C7EC-C963-4AD1-8C4A-8FCD551EE143}</ProjectGuid>
     <RootNamespace>ClownsF8</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>Clowns' F8</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -137,6 +137,7 @@
     <ClInclude Include="..\Clowns%27 F8\Application.h" />
     <ClInclude Include="..\Clowns%27 F8\Battle.h" />
     <ClInclude Include="..\Clowns%27 F8\Battle1.h" />
+    <ClInclude Include="..\Clowns%27 F8\Battle2.h" />
     <ClInclude Include="..\Clowns%27 F8\Boneyman.h" />
     <ClInclude Include="..\Clowns%27 F8\CharacterGeorgeB.h" />
     <ClInclude Include="..\Clowns%27 F8\CharacterHektor.h" />
@@ -145,6 +146,7 @@
     <ClInclude Include="..\Clowns%27 F8\Color.h" />
     <ClInclude Include="..\Clowns%27 F8\Fade.h" />
     <ClInclude Include="..\Clowns%27 F8\Language.h" />
+    <ClInclude Include="..\Clowns%27 F8\Lose.h" />
     <ClInclude Include="..\Clowns%27 F8\MainMenu.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleSceneManager.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleTransitionManager.h" />
@@ -152,6 +154,7 @@
     <ClInclude Include="..\Clowns%27 F8\Transition.h" />
     <ClInclude Include="..\Clowns%27 F8\Tree2.h" />
     <ClInclude Include="..\Clowns%27 F8\Tree3.h" />
+    <ClInclude Include="..\Clowns%27 F8\Win.h" />
     <ClInclude Include="Tree1.h" />
     <ClInclude Include="..\Clowns%27 F8\BearTrap.h" />
     <ClInclude Include="..\Clowns%27 F8\Object.h" />
@@ -189,6 +192,7 @@
     <ClCompile Include="..\Clowns%27 F8\Application.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Battle.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Battle1.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Battle2.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Boneyman.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Character.cpp" />
     <ClCompile Include="..\Clowns%27 F8\CharacterGeorgeB.cpp" />
@@ -199,6 +203,7 @@
     <ClCompile Include="..\Clowns%27 F8\Enemy.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Fade.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Language.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Lose.cpp" />
     <ClCompile Include="..\Clowns%27 F8\MainMenu.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleSceneManager.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleTransitionManager.cpp" />
@@ -206,6 +211,7 @@
     <ClCompile Include="..\Clowns%27 F8\Transition.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Tree2.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Tree3.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Win.cpp" />
     <ClCompile Include="Tree1.cpp" />
     <ClCompile Include="..\Clowns%27 F8\BearTrap.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Object.cpp" />
