--- a/Clowns' F8/Clowns' F8.vcxproj.filters
+++ b/Clowns' F8/Clowns' F8.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClInclude Include="..\Clowns%27 F8\Lose.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="..\Clowns%27 F8\ChooseCharacter.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp">
@@ -351,6 +354,9 @@
       <Filter>Scenes</Filter>
     </ClCompile>
     <ClCompile Include="..\Clowns%27 F8\Lose.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Clowns%27 F8\ChooseCharacter.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
   </ItemGroup>
