Polarbear_Slime_Burgdog_1

--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="..\Clowns%27 F8\Battle1.h" />
     <ClInclude Include="..\Clowns%27 F8\Battle2.h" />
     <ClInclude Include="..\Clowns%27 F8\Boneyman.h" />
+    <ClInclude Include="..\Clowns%27 F8\Burgdog.h" />
     <ClInclude Include="..\Clowns%27 F8\CharacterGeorgeB.h" />
     <ClInclude Include="..\Clowns%27 F8\CharacterHektor.h" />
     <ClInclude Include="..\Clowns%27 F8\CharacterSapphire.h" />
@@ -151,6 +152,8 @@
     <ClInclude Include="..\Clowns%27 F8\MainMenu.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleSceneManager.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleTransitionManager.h" />
+    <ClInclude Include="..\Clowns%27 F8\Polarbear.h" />
+    <ClInclude Include="..\Clowns%27 F8\Slime.h" />
     <ClInclude Include="..\Clowns%27 F8\Squares.h" />
     <ClInclude Include="..\Clowns%27 F8\Transition.h" />
     <ClInclude Include="..\Clowns%27 F8\Tree2.h" />
@@ -195,6 +198,7 @@
     <ClCompile Include="..\Clowns%27 F8\Battle1.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Battle2.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Boneyman.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Burgdog.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Character.cpp" />
     <ClCompile Include="..\Clowns%27 F8\CharacterGeorgeB.cpp" />
     <ClCompile Include="..\Clowns%27 F8\CharacterHektor.cpp" />
@@ -209,6 +213,8 @@
     <ClCompile Include="..\Clowns%27 F8\MainMenu.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleSceneManager.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleTransitionManager.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Polarbear.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Slime.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Squares.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Transition.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Tree2.cpp" />
