--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -153,7 +153,7 @@
     <ClInclude Include="..\Clowns%27 F8\ModuleSceneManager.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleTransitionManager.h" />
     <ClInclude Include="..\Clowns%27 F8\Polarbear.h" />
-    <ClInclude Include="..\Clowns%27 F8\Slime.h" />
+    <ClInclude Include="Polarpath.h" />
     <ClInclude Include="..\Clowns%27 F8\Squares.h" />
     <ClInclude Include="..\Clowns%27 F8\Stone.h" />
     <ClInclude Include="..\Clowns%27 F8\Transition.h" />
@@ -217,7 +217,7 @@
     <ClCompile Include="..\Clowns%27 F8\ModuleSceneManager.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleTransitionManager.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Polarbear.cpp" />
-    <ClCompile Include="..\Clowns%27 F8\Slime.cpp" />
+    <ClCompile Include="Polarpath.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Squares.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Stone.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Transition.cpp" />
