--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -146,12 +146,16 @@
     <ClInclude Include="..\Clowns%27 F8\CharacterStorm.h" />
     <ClInclude Include="..\Clowns%27 F8\ChooseCharacter.h" />
     <ClInclude Include="..\Clowns%27 F8\Color.h" />
+    <ClInclude Include="..\Clowns%27 F8\Emitter.h" />
     <ClInclude Include="..\Clowns%27 F8\Fade.h" />
     <ClInclude Include="..\Clowns%27 F8\Language.h" />
     <ClInclude Include="..\Clowns%27 F8\Lose.h" />
     <ClInclude Include="..\Clowns%27 F8\MainMenu.h" />
+    <ClInclude Include="..\Clowns%27 F8\ModuleParticleSystem.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleSceneManager.h" />
     <ClInclude Include="..\Clowns%27 F8\ModuleTransitionManager.h" />
+    <ClInclude Include="..\Clowns%27 F8\Particle.h" />
+    <ClInclude Include="..\Clowns%27 F8\ParticlePool.h" />
     <ClInclude Include="..\Clowns%27 F8\Polarbear.h" />
     <ClInclude Include="Polarpath.h" />
     <ClInclude Include="..\Clowns%27 F8\Squares.h" />
@@ -203,13 +207,16 @@
     <ClCompile Include="..\Clowns%27 F8\CharacterStorm.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ChooseCharacter.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Color.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\Emitter.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Enemy.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Fade.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Language.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Lose.cpp" />
     <ClCompile Include="..\Clowns%27 F8\MainMenu.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\ModuleParticleSystem.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleSceneManager.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ModuleTransitionManager.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\ParticlePool.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Polarbear.cpp" />
     <ClCompile Include="Polarpath.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Squares.cpp" />
