--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{22D3C7EC-C963-4AD1-8C4A-8FCD551EE143}</ProjectGuid>
     <RootNamespace>ClownsF8</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>Clowns' F8</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -144,6 +144,7 @@
     <ClInclude Include="..\Clowns%27 F8\CharacterGeorgeB.h" />
     <ClInclude Include="..\Clowns%27 F8\CharacterSapphire.h" />
     <ClInclude Include="..\Clowns%27 F8\CharacterStorm.h" />
+    <ClInclude Include="..\Clowns%27 F8\CherryBlackGlasses.h" />
     <ClInclude Include="..\Clowns%27 F8\ChooseCharacter.h" />
     <ClInclude Include="..\Clowns%27 F8\Color.h" />
     <ClInclude Include="..\Clowns%27 F8\Emitter.h" />
@@ -205,6 +206,7 @@
     <ClCompile Include="..\Clowns%27 F8\CharacterGeorgeB.cpp" />
     <ClCompile Include="..\Clowns%27 F8\CharacterSapphire.cpp" />
     <ClCompile Include="..\Clowns%27 F8\CharacterStorm.cpp" />
+    <ClCompile Include="..\Clowns%27 F8\CherryBlackGlasses.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ChooseCharacter.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Color.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Emitter.cpp" />
