blitparticle and deg 2 rad missing

--- a/Clowns' F8/Clowns' F8.vcxproj.filters
+++ b/Clowns' F8/Clowns' F8.vcxproj.filters
@@ -389,5 +389,8 @@
     <ClCompile Include="..\Clowns%27 F8\CherryBlackGlasses.cpp">
       <Filter>Entities\EntitiesEnemies</Filter>
     </ClCompile>
+    <ClCompile Include="..\Clowns%27 F8\Particle.cpp">
+      <Filter>Particle</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
